--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.2",
+    "@angular/cdk": "^12.0.2",
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
+    "@angular/material": "^12.0.2",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@date-io/date-fns": "^1.3.13",
+    "@schematics/angular": "^9.1.0",
+    "angular-calendar": "^0.28.24",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
+    "date-fns": "^2.0.0-beta.5",
     "jquery": "^3.6.0",
     "ng2-file-upload": "^1.4.0",
     "popper.js": "^1.16.1",
