--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     ],
     "license": "UNLICENSED",
     "dependencies": {
+        "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
