--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "^12.0.2",
     "@angular/material": "^12.0.2",
     "@angular/platform-browser": "~12.0.2",
@@ -23,11 +24,16 @@
     "@date-io/date-fns": "^1.3.13",
     "@schematics/angular": "^9.1.0",
     "angular-calendar": "^0.28.24",
+    "autoprefixer": "^10.2.6",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
     "date-fns": "^2.0.0-beta.5",
+    "file-loader": "^6.2.0",
+    "firebase": "^8.6.7",
+    "fraction": "^0.2.0",
     "jquery": "^3.6.0",
     "ng2-file-upload": "^1.4.0",
+    "pnp-webpack-plugin": "^1.6.4",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
@@ -35,7 +41,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.2",
+    "@angular-devkit/build-angular": "^12.0.4",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
     "@types/jasmine": "~3.6.0",
