--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,9 +44,11 @@
     "@angular-devkit/build-angular": "^12.0.4",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
+    "bcryptjs": "^2.4.3",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
@@ -54,5 +56,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.2.4"
+  },
+  "browser": {
+    "crypto": false
   }
 }
